--- a/midterm/index.html
+++ b/midterm/index.html
@@ -16,11 +16,13 @@
    <div><img src="images/lone-starfish-wide.jpg" ALIGN=”top”> </div>
 
    
-<div class="topnav">
-<a href="active" a href="#home">Home</a>
-<a href="#story">Story</a>
-<a href="#contact">Contact</a>
-
+<table>
+    <tr>
+        <th>Home</th>
+        <th>Story</th>
+        <th>Contact</th>
+    </tr>
+</table>
 
    </div>
     
