--- a/midterm/index.html
+++ b/midterm/index.html
@@ -18,9 +18,9 @@
    
 <table>
     <tr>
-        <th>Home</th>
-        <th>Story</th>
-        <th>Contact</th>
+        <td>Home</td>
+        <td>Story</td>
+        <td>Contact</td>
     </tr>
 </table>
 
