--- a/midterm/index.html
+++ b/midterm/index.html
@@ -49,21 +49,20 @@
             <li>    Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.
     </li> </ul> 
     
-    <form>
+    <form action="contactform"> 
      <label for="yname"> Your Name </label> <br>
       <input type="text" id="yname" name="yname"> <br>
       <label for="ymail"> Your Email </label> <br>
        <input type="text" id="ymail" name="ymail"> <br>
-      <form action="your Message"> 
       <label for="ymessage"> Your Message</label> <br>
       <textarea id="ymessage" name="ymessage" rows="4" cols="50"> 
       </textarea> 
    
   <p> Would you like to visit the starfish?</p>        
   
-  <input type="radio" id="yes" name="visit starfish" value="yes"
+  <input type="radio" id="yes" name="visit starfish" value="yes">
   <label for="yes"> Yes </label> 
-  <input type="radio" id="No" name="visit starfish" value="no">
+  <input type="radio" id="no" name="visit starfish" value="no">
   <label for="no"> No </label> 
   <input type="radio" id="maybe" name="visit starfish" value="maybe">
   <label for="maybe"> Maybe </label> 
